styles/main.css
:root {
    --color-bg: rgb(16, 16, 16);
    --color-main: rgb(255, 255, 255);

    font-family: "Montserrat", sans-serif;
    font-size: 16px;
}

* {
    font-family: inherit;
}

body {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    width: 100vw;
    height: 100vh;
    padding: 2rem;
    box-sizing: border-box;
    margin: 0;
    user-select: none;
    color: var(--color-main);
    background: var(--color-bg);
}

a {
    color: inherit;
}

button, .tb-input-label {
    position: relative;
    border: none;
    border-radius: 100rem;
    font-size: inherit;
    font-family: inherit;
    font-weight: bold;
    text-align: center;
    color: var(--color-main);
    background: var(--color-bg);
    cursor: pointer;
    z-index: 1;
    transition: opacity 100ms ease-in-out, color 100ms ease-in-out, background 100ms ease-in-out;
}

button:hover, .tb-input-label:hover, .tb-button-active, .tab-buttons > button.tab-button-inactive:hover {
    color: var(--color-bg);
    background: var(--color-main);
}

input[type="file"] {
    display: none;
}

input[type="checkbox"] {
    --checkbox-size: 16;
    display: grid;
    place-content: center;
    appearance: none;
    cursor: pointer;
    width: calc(var(--checkbox-size) * 0.125rem);
    height: calc(var(--checkbox-size) * 0.125rem);
    border: 0.125rem solid var(--color-main);
    border-radius: 0.125rem;
    box-sizing: border-box;
    margin: 0;
}

input[type="checkbox"]::before {
    content: "";
    width: calc(var(--checkbox-size) * 0.125rem - 0.5rem);
    height: calc(var(--checkbox-size) * 0.125rem - 0.5rem);
    background: var(--color-main);
    transform: scale(0);
    transition: 100ms transform ease-in-out;
}

input[type="checkbox"]:checked::before {
    transform: scale(1);
}



/* TOP BAR */
.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}

.tb-chart {
    overflow: hidden;
}

.tb-chart > div, .tb-filename {
    text-wrap: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.tb-chart > div:first-child {
    font-size: 3rem;
}

#tb-title {
    font-weight: bold;
}

#tb-artist, #tb-filename {
    opacity: 50%;
}

#tb-filename {
    font-size: 1.5rem;
}

.tb-buttons {
    display: flex;
    gap: 1rem;
}

.tb-button-container {
    position: relative;
}

.tb-button-container.disabled {
    opacity: 50%;
    pointer-events: none;
}

.tb-button {
    height: 3.25rem;
    padding: 0.5rem 2rem;
    border: 0.25rem solid var(--color-main);
    border-radius: 1.625rem;
    box-sizing: border-box;
    font-size: 1.5rem;
    z-index: 2;
}

.tb-button > div {
    display: flex;
    align-items: center;
    gap: 1ch;
    pointer-events: none;
}

.tb-button > div > span:last-child {
    width: 1.25rem;
    height: 1.25rem;
    --webkit-mask-image: url(../icons/chevron-down.svg);
    mask-image: url(../icons/chevron-down.svg);
    --webkit-mask-size: 1.25rem;
    mask-size: 1.25rem;
    background: var(--color-main);
    transition: background 100ms ease-in-out;
}

.tb-button:hover > div > span:last-child, .tb-button-active > div > span:last-child {
    background: var(--color-bg);
}

.tb-button-dropdown {
    position: absolute;
    top: 0;
    left: 0;
    display: grid;
    grid-template-rows: 0fr;
    width: 100%;
    min-height: 3.25rem;
    padding: 2.5rem 0.25rem 0.25rem 0.25rem;
    border: 0.25rem solid var(--color-main);
    border-radius: 1.625rem;
    box-sizing: border-box;
    font-size: 1.125rem;
    overflow: hidden;
    transition: all 250ms ease-in-out;
}

.tb-button-dropdown > div {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: 0.25rem;
    overflow: hidden;
}

.tb-button-dropdown-active {
    grid-template-rows: 1fr;
    padding-top: 3.25rem;
    border-radius: 1.625rem 1.625rem 1.25rem 1.25rem;
}



/* TAB MANAGER + CONTENT */
.tab-manager {
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
}

.tab-buttons {
    display: flex;
    gap: 0.5rem;
    margin-left: 1rem;
}

.tab-buttons > button {
    position: relative;
    padding: 0.5rem 1rem;
    border-left: 0.5rem solid var(--color-main);
    border-top: 0.5rem solid var(--color-main);
    border-right: 0.5rem solid var(--color-main);
    border-radius: 0.5rem 0.5rem 0 0;
    font-size: 1.5rem;
    color: var(--color-bg);
    background: var(--color-main);
    z-index: 2;
    transition: opacity 100ms ease-in-out, color 100ms ease-in-out, background 100ms ease-in-out;
}

.tab-buttons > button.tab-button-inactive {
    opacity: 50%;
    color: var(--color-main);
    background: var(--color-bg);
    z-index: 0;
}

.tabs {
    position: relative;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.tab {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 1rem;
    border: 0.5rem solid var(--color-main);
    border-radius: 1rem;
    box-sizing: border-box;
    overflow: hidden;
}

.tab-inactive {
    display: none !important;
}



/* BOTTOM BAR */
.bottom-bar {
    display: flex;
    justify-content: space-between;
}

.bb span {
    opacity: 50%;
}

.bb1 {
    display: flex;
    gap: 1ch;
}

